--- a/style.css
+++ b/style.css
@@ -170,7 +170,13 @@ footer {
     cursor: pointer;
     color: white;
 }
+.member-display {
+    margin-left: 15px;
+    font-size: 16px;
+    opacity: 0.8;
+}
 
 .light-mode .theme-btn {
     color: #111;
 }
+
